# langchain-mongodb

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RELEASE.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/scripts/: check_diff.py
.github/workflows/: _lint.yml  _release.yml  _test.yml  _test_release.yml  ci.yml  codeql.yml  zizmor.yml
docs/: conf.py  create_api_rst.py
docs/templates/: class.rst  enum.rst  function.rst  pydantic.rst  runnable_non_pydantic.rst  runnable_pydantic.rst  typeddict.rst
libs/langchain-mongodb/: CHANGELOG.md  pyproject.toml
libs/langchain-mongodb/langchain_mongodb/: cache.py  chat_message_histories.py  docstores.py  indexes.py  loaders.py  pipelines.py  vectorstores.py
libs/langchain-mongodb/langchain_mongodb/agent_toolkit/: database.py
libs/langchain-mongodb/langchain_mongodb/graphrag/: graph.py  prompts.py
libs/langchain-mongodb/langchain_mongodb/retrievers/: full_text_search.py  hybrid_search.py
libs/langchain-mongodb/tests/: utils.py
libs/langchain-mongodb/tests/integration_tests/: conftest.py  test_agent_toolkit.py  test_cache.py  test_chain_example.py  test_chat_message_histories.py  test_docstore.py  test_graphrag.py  test_indexes.py  test_loaders.py  test_mmr.py  test_mongodb_database.py  test_parent_document.py  test_retriever_selfquerying.py  test_retrievers.py  test_vectorstore_add_delete.py  (+2 more)
libs/langgraph-checkpoint-mongodb/: CHANGELOG.md  pyproject.toml
libs/langgraph-store-mongodb/: README.md
scripts/: setup_ollama.sh  start_local_atlas.sh  update-locks.sh
(+8 files in other folders)
